Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,55 +19,51 @@
     </section>
 
     <section class="main-content">
-      <h2>
-<a id="welcome-to-the-rhomestuck-discord-server-tags" class="anchor" href="#welcome-to-the-rhomestuck-discord-server-tags" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the /r/homestuck Discord Server Tags</h2>
+      <h1>
+<a id="welcome-to-the-rhomestuck-discord-server-tags" class="anchor" href="#welcome-to-the-rhomestuck-discord-server-tags" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the /r/homestuck Discord Server Tags</h1>
 
-<p>Sup douchebags.</p>
-
-<h2>
-<a id="tutorials-on-how-to-use-ma-tags" class="anchor" href="#tutorials-on-how-to-use-ma-tags" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tutorials on how to use ma tags</h2>
+<p>Sup douchebags. </p>
 
 <h1>
-<a id="t-shitscore" class="anchor" href="#t-shitscore" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>+t shitscore</h1>
+<a id="tutorials-on-how-to-use-ma-tags" class="anchor" href="#tutorials-on-how-to-use-ma-tags" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tutorials on how to use ma tags</h1>
 
-<p>You put in <em>+t shitscore [PERSON 1]  [PERSON 2] [OPTIONAL PERSON]</em>. And then <a href="https://github.com/42" class="user-mention">@42</a> will output this:</p>
+<h2>
+<a id="t-shitscore" class="anchor" href="#t-shitscore" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>+t shitscore</h2>
 
-<p><strong>=====SHITSCORING=====</strong>
-<em>[PERSON 1]</em>^
-<em>(THE QUADRANT)^^
-*[PERSON 2]</em>^^^</p>
+<p>You put in <em>+t shitscore [PERSON 1]  [PERSON 2] [OPTIONAL PERSON]</em>. And then <a href="https://github.com/42" class="user-mention">@42</a> will output this:   </p>
 
-<p>(THE BOT'S COMMENT)^^^^
-<strong>=====SHITSCORING=====</strong></p>
+<p><strong>=====SHITSCORING=====</strong><br>
+<em>[PERSON 1]</em>^<br>
+<em>(THE QUADRANT)^^<br>
+*[PERSON 2]</em>^^^  </p>
 
-<p>^This line will be the [PERSON 1] you put earlier. If you put nothing for the [PERSON 1], the bot will generate a random user for you.
-^^This line will be the QUADRANT which defines the shitship.
-^^^This line will be the [PERSON 2] you put earlier. If you put nothing for the [PERSON 2], the bot will take your username instead.
-^^^^This line will be the COMMENT on the ship.</p>
+<p>(THE BOT'S COMMENT)^^^^<br>
+<strong>=====SHITSCORING=====</strong>  </p>
 
-<p><strong>====NOTES!!!====</strong>
-The [PERSON]s can't be multi-worded, unless ?ou put quotes around them.
-[OPTIONAL PERSON] is only used for Auspisticism (or as 42 calls it, Ausspississm), you can leave it blank, it will generate a random user.</p>
+<p>^This line will be the [PERSON 1] you put earlier. If you put nothing for the [PERSON 1], the bot will generate a random user for you.<br>
+^^This line will be the QUADRANT which defines the shitship.<br>
+^^^This line will be the [PERSON 2] you put earlier. If you put nothing for the [PERSON 2], the bot will take your username instead.<br>
+^^^^This line will be the COMMENT on the ship.  </p>
 
-<p><strong>====EXAMPLE====</strong>
-<em>+t shitscore AndrewHussie</em>
-The bot will reply with:
-<strong>=====SHITSCORING=====</strong>
-<em>AndrewHussie</em>
-{set:skore;{choose:? 'Kismitude';? 'Maspritship';? 'Moralliance';? 'Aussipississm'
-The Asshole Between Them 
--={user}=-;};}
-{skore}</p>
+<p><strong>====NOTES!!!====</strong><br>
+The [PERSON]s can't be multi-worded, unless you put quotes around them.<br>
+[OPTIONAL PERSON] is only used for Auspisticism (or as 42 calls it, Ausspississm), you can leave it blank, it will generate a random user.  </p>
 
-<p><em>Your Username</em></p>
+<p><strong>====EXAMPLE====</strong><br>
+<em>+t shitscore AndrewHussie</em><br>
+The bot will reply with:<br>
+<strong>=====SHITSCORING=====</strong><br>
+<em>AndrewHussie</em><br>
+&lt;&gt; Moralliance<br>
+<em>Your Username</em>  </p>
 
-<p>14% Where'd you get this ship? The thrift store?
-<strong>=====SHITSCORING=====</strong></p>
+<p>14% Where'd you get this ship? The thrift store?<br>
+<strong>=====SHITSCORING=====</strong>  </p>
 
 <h1>
 <a id="t-blackmarket" class="anchor" href="#t-blackmarket" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>+t blackmarket</h1>
 
-<p>Just put in <em>+t blackmarket [THING]</em> in and it'll score how much [THING] is worth on the black market.</p>
+<p>Just put in <em>+t blackmarket [THING]</em> in and it'll score how much [THING] is worth on the black market.  </p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/WaveJones/-r-homestuck-Discord-Server-Tags">/r/homestuck Discord Server Advanced Tags by aviaryDestruction</a> is maintained by <a href="https://github.com/WaveJones">WaveJones</a>.</span>
